Project

General

Profile

Actions

Bug #16470

closed

Timeout sending mirroring notification shouldn't result in failure

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Log and ignore any notification failure when sending mirroring status updates:

2016-06-24 09:29:16.838942 7f803220c700 -1 librbd::MirroringWatcher: : error encountered sending image updated notification: (110) Connection timed out
2016-06-24 09:29:16.838959 7f803220c700 -1 librbd: failed to send update notification: (110) Connection timed out
2016-06-24 09:29:16.838963 7f803220c700 -1 librbd: error enabling mirroring: (110) Connection timed out
2016-06-24 09:29:21.978043 7f803220c700 -1 rbd::mirror::image_replayer::CreateImageRequest: 0x7f7ef47b02a0 handle_create_image: failed to create local image: (110) Connection timed out
2016-06-24 09:29:21.978059 7f803220c700 -1 rbd::mirror::image_replayer::BootstrapRequest: 0x7f7ef46de360 handle_create_local_image: failed to create local image: (110) Connection timed out

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16482: jewel: Timeout sending mirroring notification shouldn't result in failureResolvedLoïc DacharyActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Loïc Dachary almost 8 years ago

  • Copied to Backport #16482: jewel: Timeout sending mirroring notification shouldn't result in failure added
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF