librbd: do not propagate mirror status notification failures

These should be treated as a broadcast since no ACK is required. The
peer will eventually see the notification or its watch will have timed
out and it will re-sync.

Fixes: http://tracker.ceph.com/issues/16470
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 97bade9f76af62765d7aa8c2154e51a7b231e40f)